Fixed overflow issues

--- a/styles.css
+++ b/styles.css
@@ -2,17 +2,20 @@
     font-size: 62.5%;
     font-family: 'Ubuntu', sans-serif;
 }
-
 body{
     background-image: url('background.jpg');
-    top:0px; bottom: 0px;
-    height: 100%;
-    width: 100%;
+    top:0px; 
+    bottom: 0px;
+    right: 0px;
+    left: 0px;
     background-repeat: no-repeat;
     background-attachment: fixed;
     position: absolute;
-    overflow-x: scroll;
+    overflow-y: scroll;
+    overflow-x: hidden;
 }
+
+/* Header */
 
 header{
     display: flex;
@@ -29,28 +32,8 @@ header{
     color: rgb(4, 39, 60, 1);
 }
 
-#search-results-item-container{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-}
-
-.item-top-section{
-    display: flex;
-    flex-direction: row;
-    margin-bottom: 3em;
-}
-.item-bottom-section{
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: center;
-    margin-top: 2rem;
-    padding: 0.5rem;
-}
-
 #anime-name-input{
-    font-family: 'Ubuntu', sans-serif;
+    font-family: inherit;
     width: max(25rem, 30vw);
     box-shadow: rgba(0, 0, 0, 0.35) 0px 2px 10px;
     margin-bottom: 3rem;
@@ -65,8 +48,9 @@ header{
     outline: none;
 }
 
+
 #search-anime-button{
-    font-family: 'Ubuntu', sans-serif;
+    font-family: inherit;
     transition: background-color 0.15s;
     border-width: 2px;
     border-style: solid;
@@ -91,6 +75,15 @@ header{
     background-color: rgb(4, 39, 60, 0.9);
 }
 
+
+/* Main */
+
+#search-results-item-container{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
 .anime-info-item-div{
     display: flex;
     flex-direction: column;
@@ -102,6 +95,20 @@ header{
     padding: 2em;
     margin-top: 4em;
     margin-bottom: 4em;
+}
+
+.item-top-section{
+    display: flex;
+    flex-direction: row;
+    margin-bottom: 3em;
+}
+.item-bottom-section{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    margin-top: 2rem;
+    padding: 0.5rem;
 }
 
 .anime-title{
